Fix typo in exp post and mac list post

--- a/content/blog/2022-06-24-new-mac.md
+++ b/content/blog/2022-06-24-new-mac.md
@@ -5,6 +5,8 @@ description = ""
 tags = []
 +++
 
+**Updated on 2022-09-14:** Made some changes to the procedure. I'll keep the [repository](https://github.com/rexarski/toolbox) updated on GitHub.
+
 There are some things that we don't need to recite fluently, but rather to keep them in a memo. Like the following a couple of things to do when I set up a new Mac.
 
 - [ ] Set up iCloud account.
