Update list, update rime post

--- a/content/zh/2023-01-06-rime.md
+++ b/content/zh/2023-01-06-rime.md
@@ -20,3 +20,9 @@ tags = ["macOS", "rime", "squirrel"]
 
 9. 虽然已经有了[不错的字典方案](https://github.com/Iorest/rime-dict)，还是想要自己逐渐扩充自己常用的词库。
 10. 以及在 RSS 源里订阅一下 [Rime 的项目更新](https://github.com/rime/squirrel/releases)，这样就可以及时更新了。
+
+***
+
+2023-01-27 更新：
+
+自定义中文输入法字体之后，某些异体字会以乱码（方块）形式出现。mritd 的[解决方法](https://mritd.com/2019/03/23/oh-my-rime/)为下载 [花园明朝](https://github.com/mritd/rime/tree/master/fonts) 字体。这样，当 `squirrel.custom.yaml` 自定义字体中不含有生僻字的时候，就会默认使用 HanaMinA 或者 HanaMinB 字体代替。
