--- a/content/blog/2023-01-14-snippets.md
+++ b/content/blog/2023-01-14-snippets.md
@@ -1,5 +1,5 @@
 +++
-title = "Alfred Snippets to Raycast"
+title = "Alfred snippets to Raycast"
 date = "2023-01-14"
 description = ""
 tags = ["automation", "Raycast", "Alfred"]
