--- a/content/zh/2023-01-06-rime.md
+++ b/content/zh/2023-01-06-rime.md
@@ -12,11 +12,11 @@ tags = ["macOS", "rime", "squirrel"]
 3. 安装[双拼输入方案](https://github.com/rime/rime-double-pinyin)，`bash rime-install double-pinyin`
 4. 在 `/Rime/default.yaml` 中添加 `double_pinyin_flypy` 为候选方案。
 5. 创建并自定义 `squirrel.custom.yaml`，参考[这里](https://gist.github.com/lotem/2290714)。
-6. Deploy 方案，快捷键为 `Ctrl + Option + ~`.
-7. 使用 `Ctrl + ~` 切换方案。
+6. Deploy 方案，快捷键为 <kbd>Ctrl</kbd> + <kbd>Option</kbd> + <kbd>~</kbd>.
+7. 使用 <kbd>Ctrl</kbd> + <kbd>~</kbd> 切换方案。
 8. 另外在上文中学到一个快捷键：
 
-> Rime 删除现有词语的快捷键是 `Fn-⌃Control-⌫Delete`，除了输入法自带的基本词语，任何用户输入习惯都可以被移除。
+> Rime 删除现有词语的快捷键是 <kbd>Fn</kbd> + <kbd>⌃Control</kbd> + <kbd>⌫Delete</kbd>，除了输入法自带的基本词语，任何用户输入习惯都可以被移除。
 
 9. 虽然已经有了[不错的字典方案](https://github.com/Iorest/rime-dict)，还是想要自己逐渐扩充自己常用的词库。
 10. 以及在 RSS 源里订阅一下 [Rime 的项目更新](https://github.com/rime/squirrel/releases)，这样就可以及时更新了。
