[UPDATE & STYLE] add tag list to list view
- lowercase all blog post tags
- add rounded avatar on index page
- add new css style for avatar

--- a/content/blog/2022-06-24-new-mac.md
+++ b/content/blog/2022-06-24-new-mac.md
@@ -2,7 +2,7 @@
 title = "New Mac setup checklist"
 date = "2022-06-24"
 description = ""
-tags = []
+tags = ["macos"]
 +++
 
 **Updated on 2022-09-14:** Made some changes to the procedure. I'll keep the [repository](https://github.com/rexarski/toolbox) updated on GitHub.
@@ -49,6 +49,7 @@ Host *
 ```
 
 3. Add the SSH key to GitHub account
+
 - `pbcopy < ~/.ssh/id_ed25519_github.pub`
 - On GitHub, Settings -> SSH and GPG keys -> New SSH key
 
