--- a/content/blog/2023-01-14-snippets.md
+++ b/content/blog/2023-01-14-snippets.md
@@ -2,7 +2,7 @@
 title = "Alfred snippets to Raycast"
 date = "2023-01-14"
 description = ""
-tags = ["automation", "Raycast", "Alfred"]
+tags = ["automation", "raycast", "alfred"]
 +++
 
 I aim to migrate all my daily routines from [Alfred](https://www.alfredapp.com/) to [Raycast](https://www.raycast.com/) due to its more powerful extension support. Plus, to be honest I've never exploit the full potential of Alfred's workflows though been a Powerpack purchaser for years.
