--- a/content/blog/2023-02-15-mail-font.md
+++ b/content/blog/2023-02-15-mail-font.md
@@ -2,7 +2,7 @@
 title = "Mail font"
 date = "2023-02-15"
 description = ""
-tags = ["macOS"]
+tags = ["macos"]
 +++
 
 Accidentally changed the default font of macOS Mail.app, and was super surprised to see there's no option to "reset to defaults". Plus, there's no other ways to select a "system font".
