--- a/content/zh/2023-01-06-rime.md
+++ b/content/zh/2023-01-06-rime.md
@@ -2,7 +2,7 @@
 title = "RIME 输入法配置"
 date = "2023-01-06"
 description = ""
-tags = ["macOS", "rime", "squirrel"]
+tags = ["macos", "rime", "squirrel"]
 +++
 
 看到这篇「[为什么我在 2022 年还坚持使用 Rime 输入法](https://utgd.net/article/9618)」，确实觉得 macOS 自带的输入法有其局限性，于是秉着练习双拼的想法，重新折腾一下 Rime 输入法。
