--- a/content/blog/2022-12-05-r4ds-2ed.md
+++ b/content/blog/2022-12-05-r4ds-2ed.md
@@ -2,7 +2,7 @@
 title = "New chapters of R for Data Science"
 date = "2022-12-05"
 description = ""
-tags = ["book", "short"]
+tags = ["book"]
 +++
 
 I just realized this classic will be and has been updated [toward a second edition release.](https://r4ds.hadley.nz/preface-2e.html). That's an auto-must-buy for me.
