--- a/content/zh/2023-01-06-rime.md
+++ b/content/zh/2023-01-06-rime.md
@@ -7,6 +7,8 @@ tags = ["macos", "rime", "squirrel"]
 
 看到这篇「[为什么我在 2022 年还坚持使用 Rime 输入法](https://utgd.net/article/9618)」，确实觉得 macOS 自带的输入法有其局限性，于是秉着练习双拼的想法，重新折腾一下 Rime 输入法。
 
+![rime](https://images.unsplash.com/photo-1503416997304-7f8bf166c121?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=900&q=80)
+
 1. 从零开始安装 [Rime 输入法](https://rime.im/)。
 2. 安装 [plum](https://github.com/rime/plum). `curl -fsSL https://raw.githubusercontent.com/rime/plum/master/rime-install | bash`
 3. 安装[双拼输入方案](https://github.com/rime/rime-double-pinyin)，`bash rime-install double-pinyin`
@@ -23,6 +25,33 @@ tags = ["macos", "rime", "squirrel"]
 
 ***
 
-2023-01-27 更新：
+- 2023-01-27 更新：
+  - 自定义中文输入法字体之后，某些异体字会以乱码（方块）形式出现。mritd 的[解决方法](https://mritd.com/2019/03/23/oh-my-rime/)为下载 [花园明朝](https://github.com/mritd/rime/tree/master/fonts) 字体。这样，当 `squirrel.custom.yaml` 自定义字体中不含有生僻字的时候，就会默认使用 HanaMinA 或者 HanaMinB 字体代替。
 
-自定义中文输入法字体之后，某些异体字会以乱码（方块）形式出现。mritd 的[解决方法](https://mritd.com/2019/03/23/oh-my-rime/)为下载 [花园明朝](https://github.com/mritd/rime/tree/master/fonts) 字体。这样，当 `squirrel.custom.yaml` 自定义字体中不含有生僻字的时候，就会默认使用 HanaMinA 或者 HanaMinB 字体代替。
+- 2023-04-24 更新：
+  - 先前在几个关注的中文 Telegram 群里了解到一个 Rime 的 配置方案——「[雾凇拼音](https://github.com/iDvel/rime-ice)」，主要有词库扩充和对双拼的支持（当然原来我也是用的双拼）。使用了一下午，管用，但是文档写得有些难懂。瑕不掩瑜。
+  - 可以用过 `plum` 来直接安装/更新配方：`bash rime-install iDvel/rime-ice:others/recipes/full`
+  - 雾凇的仓库里也推荐了一款不错的中文字体——「[霞鹜文楷](https://github.com/lxgw/LxgwWenKai)」。
+  - > 落霞与孤鹜齐飞，秋水共长天一色。
+  - 用[这个工具](https://gjrobert.github.io/Rime-See-Me-squirrel/)自定义了一个主题 (`squirrel.custom.yaml`)，用了<strong style="color:#16A666">接近微信的绿色</strong>，对眼睛挺舒服的。
+
+![rime-theme](/images/blog/rime-theme.jpg)
+
+```yaml
+patch:
+    style/color_scheme: mechat # 選擇配色方案
+    'preset_color_schemes/mechat':
+        name: 没信
+        author: rexarski
+        back_color: '0xF9F9F9'
+        text_color: '0x444444'
+        hilited_text_color: '0x444444'
+        hilited_back_color: '0xBBF9F9'
+        hilited_candidate_text_color: '0xF9F9F9'
+        hilited_candidate_back_color: '0x77B107'
+        hilited_candidate_label_color: '0xF9F9F9'
+        hilited_comment_text_color: ''
+        candidate_text_color: '0x444444'
+        label_color: '0x444444'
+        comment_text_color: ''
+```
