[UPDATE] update correct config in RIME post

--- a/content/zh/2023-01-06-rime.md
+++ b/content/zh/2023-01-06-rime.md
@@ -33,25 +33,6 @@ tags = ["macos", "rime", "squirrel"]
   - 可以用过 `plum` 来直接安装/更新配方：`bash rime-install iDvel/rime-ice:others/recipes/full`
   - 雾凇的仓库里也推荐了一款不错的中文字体——「[霞鹜文楷](https://github.com/lxgw/LxgwWenKai)」。
   - > 落霞与孤鹜齐飞，秋水共长天一色。
-  - 用[这个工具](https://gjrobert.github.io/Rime-See-Me-squirrel/)自定义了一个主题 (`squirrel.custom.yaml`)，用了<strong style="color:#16A666">接近微信的绿色</strong>，对眼睛挺舒服的。
+  - 用[这个工具](https://gjrobert.github.io/Rime-See-Me-squirrel/)自定义了一个主题，用了<strong style="color:#16A666">接近微信的绿色</strong>，对眼睛挺舒服的。具体的配置可以参考我的 [`squirrel.custom.yaml`](https://github.com/rexarski/toolbox/blob/main/config/squirrel.custom.yaml).
 
 ![rime-theme](/images/blog/rime-theme.jpg)
-
-```yaml
-patch:
-    style/color_scheme: mechat # 選擇配色方案
-    'preset_color_schemes/mechat':
-        name: 没信
-        author: rexarski
-        back_color: '0xF9F9F9'
-        text_color: '0x444444'
-        hilited_text_color: '0x444444'
-        hilited_back_color: '0xBBF9F9'
-        hilited_candidate_text_color: '0xF9F9F9'
-        hilited_candidate_back_color: '0x77B107'
-        hilited_candidate_label_color: '0xF9F9F9'
-        hilited_comment_text_color: ''
-        candidate_text_color: '0x444444'
-        label_color: '0x444444'
-        comment_text_color: ''
-```
