[REFACTOR, REMOVE] remove zh and redundant contents
- replace post directory from /blog to /posts
- update with new domain name

--- a/content/posts/2023-05-20-chitchat.md
+++ b/content/posts/2023-05-20-chitchat.md
@@ -2,10 +2,8 @@
 title = "chitchat"
 date = "2023-05-20"
 description = ""
-tags = ["nlp", "chatgpt"]
+tags = ["llm"]
 +++
-
-![chitchat-img](https://github.com/rexarski/chitchat/blob/main/logo.jpg)
 
 I recently worked on another project called [chitchat](https://github.com/rexarski/chitchat), which I featured in my school/work side project [climate-plus](https://github.com/rexarski/climate-plus). Chitchat serves as an extension to the chatgpt (gpt-3.5 model, in particular) and offers additional functionalities like file input and question handling. One of the key takeaways from this project, for me, was understanding how [`langchain`](https://github.com/hwchase17/langchain) acts as the intermediary between LLM and vector search.
 
