--- a/content/posts/2023-09-26-starship.md
+++ b/content/posts/2023-09-26-starship.md
@@ -1,8 +1,8 @@
 +++
-title = "My Starship setup"
+title = "How to start a Starship"
 date = "2023-09-26"
 description = ""
-tags = ["terminal"]
+tags = ["cli"]
 +++
 
 So the story begins with an acquisition, which is something worth celebrating. [Fig](https://fig.io/) is acquired by AWS. Although speculators claim that the developers are probably acqui-hired. As a long-term user, I'm happy for them. I have been using Fig as my iTerm companion / zsh buddy for a few years, maybe even from the very beginning?
