--- a/content/posts/2023-01-14-snippets.md
+++ b/content/posts/2023-01-14-snippets.md
@@ -1,9 +1,11 @@
 +++
-title = "Alfred snippets to Raycast"
+title = "How to migrate Alfred snippets to Raycast"
 date = "2023-01-14"
 description = ""
-tags = ["automation", "raycast", "alfred"]
+tags = ["snippet"]
 +++
+
+Update on 2023-12-13: Hugo is going to remove `--verbose` flag in the future, so we updated the snippet accordingly.
 
 I aim to migrate all my daily routines from [Alfred](https://www.alfredapp.com/) to [Raycast](https://www.raycast.com/) due to its more powerful extension support. Plus, to be honest I've never exploit the full potential of Alfred's workflows though been a Powerpack purchaser for years.
 
@@ -13,7 +15,7 @@ The most frequent use scenario for me is to expand some snippets. Here is a list
 | :------------------------------ | :--------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | R assignment                    | `;;`       | `<-`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
 | awesome git log                 | `;gitlog`  | `git log --graph --oneline --all --decorate --topo-order`                                                                                                                                                                                                                                                                                                                                                                                                                                           |
-| hugo server local               | `;hugo`    | `hugo server --gc -D -v --disableFastRender --buildFuture`                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+| hugo server local               | `;hugo`    | `hugo server --gc -D --disableFastRender --buildFuture`                                                                                                                                                                                                                                                                                                                                                                                                                                             |
 | Lorem sample text               | `;lorem`   | `Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.`                                     |
 | markdown-image-insert           | `;image`   | `<img class="special-img-class" style="width:100%" src="" />`                                                                                                                                                                                                                                                                                                                                                                                                                                       |
 | R package requirement           | `;require` | `if (!require("pacman")) install.packages("pacman") pacman::p_load(package1, package2, package_n)`                                                                                                                                                                                                                                                                                                                                                                                                  |
