[UPDATE] multiple style update
- remove magick.css in README and style html
- remove redundant whitespaces in home
- modify page title with code blocks
- move <mark> tag to the inside of a link
- increase max-width of body from 720px to 960px

--- a/content/posts/2024-03-31-distillm-02.md
+++ b/content/posts/2024-03-31-distillm-02.md
@@ -14,7 +14,7 @@ Expect shorter, bite-sized tidbits I stumble upon in my day-to-day life. After a
 - March 4th.
   - [Claude 3 model family](https://www.anthropic.com/news/claude-3-family). For some reason, they decide to call them Opus, Sonnet, and Haiku. [Opus seems to outperform GPT-4 in many benchmarks.](https://www.anthropic.com/_next/image?url=https%3A%2F%2Fwww-cdn.anthropic.com%2Fimages%2F4zrzovbb%2Fwebsite%2F9ad98d612086fe52b3042f9183414669b4d2a3da-2200x1954.png&w=3840&q=75). Context window size bumps to 200k.
 - March 5th.
-  - <mark>[You can now train a 70b language model at home](https://www.answer.ai/posts/2024-03-06-fsdp-qlora.html)</mark>, a quite detailed walkthrough how the current LLM training procedure is developed.
+  - [<mark>You can now train a 70b language model at home</mark>](https://www.answer.ai/posts/2024-03-06-fsdp-qlora.html), a quite detailed walkthrough how the current LLM training procedure is developed.
     - [HN discussion](https://news.ycombinator.com/item?id=39635483)
     - A normal desktop computer setup, combining FSDP and QLoRA, can train a 70b language model.
     - **QLoRA** combines two advanced techniques in modern neural networks: *quantization* and *LoRA*.
