--- a/content/posts/2024-03-31-distillm-02.md
+++ b/content/posts/2024-03-31-distillm-02.md
@@ -9,7 +9,8 @@ tags = ["nlp", "distillm"]
 Life has a funny way of keeping us on our toes, doesn't it? These past few months have been, a whirlwind of errands filling my todo lists. Despite the chaos, I did manage to carve out a bit of downtime to put together this blog post. But let's face it, they won't ever be my longterm commitment. Honestly, my goal is not (maybe was) to keep a rundown of what's happening in or around the industry. Rather, I want this space to be more like a reflection of my thoughts and encounters.
 
 Expect shorter, bite-sized tidbits I stumble upon in my day-to-day life. After all, I don't wanna carry more burden with me :)
-\## What happened in March 2024?
+
+## What happened in March 2024?
 
 - March 4th.
   - [Claude 3 model family](https://www.anthropic.com/news/claude-3-family). For some reason, they decide to call them Opus, Sonnet, and Haiku. [Opus seems to outperform GPT-4 in many benchmarks.](https://www.anthropic.com/_next/image?url=https%3A%2F%2Fwww-cdn.anthropic.com%2Fimages%2F4zrzovbb%2Fwebsite%2F9ad98d612086fe52b3042f9183414669b4d2a3da-2200x1954.png&w=3840&q=75). Context window size bumps to 200k.
