[ADD] add zh post, fix typo in distillm03

--- a/content/posts/2024-05-01-distillm-03.md
+++ b/content/posts/2024-05-01-distillm-03.md
@@ -17,7 +17,7 @@ Here I am, again during my quick lunch break, bringing the third installment in 
   - [\[2404.02258\] Mixture-of-Depths: Dynamically allocating compute in transformer-based language models](https://arxiv.org/abs/2404.02258)
 - April 7th.
   - [SentenceTransformers: Python framework for sentence, text and image embeddings \| Hacker News](https://news.ycombinator.com/item?id=39959790)
-    - - [`SentenceTransformers`](https://sbert.net/), and its paper [\[1908.10084\] Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks](https://arxiv.org/abs/1908.10084)
+    - [`SentenceTransformers`](https://sbert.net/), and its paper [\[1908.10084\] Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks](https://arxiv.org/abs/1908.10084)
   - [3Blue1Brown - Visualizing Attention, a Transformer's Heart \| Chapter 6, Deep Learning](https://www.3blue1brown.com/lessons/attention)
 - April 9th.
   - [Mistral tweet a magnet link for mixtral-8x22b](https://simonwillison.net/2024/Apr/10/mixtral-8x22b/)
