[REFACTOR] Replace title url with date and slug
- update maui page
- add maui-pixel gif

--- a/content/zh/2023-01-06-rime.md
+++ b/content/zh/2023-01-06-rime.md
@@ -1,5 +1,6 @@
 +++
 title = "RIME 输入法配置"
+slug = "rime"
 date = "2023-01-06"
 description = "在 macOS 上配置一下我最喜欢的鼠须管输入法，以便以后的自己需要重新部署。"
 tags = ["没事爱折腾"]
