[FIX] double quotation mark in frontmatter

--- a/content/zh/2025-01-01-ac2024.md
+++ b/content/zh/2025-01-01-ac2024.md
@@ -1,9 +1,9 @@
 +++
-title = “版本号 1.2024.366”
-date = “2025-01-01”
-slug = “ac2024”
-description = “每年写，今年如何写得不同呢？”
-tags = [“总结报告”]
+title = "版本号 1.2024.366"
+date = "2025-01-01"
+slug = "ac2024"
+description = "每年写，今年如何写得不同呢？"
+tags = ["总结报告"]
 +++
 
 按照所谓「[pride versioning](https://mastodon.online/@nikitonsky/113691789641950263)」的说法，目前这篇应该是这么一个标题。
