[FIX] markdown issue in ac2024.md

--- a/content/zh/2025-01-01-ac2024.md
+++ b/content/zh/2025-01-01-ac2024.md
@@ -39,13 +39,24 @@ tags = ["总结报告"]
 
 ## 书影音游总结
 
-- 最喜爱专辑：**Diamond Jubilee**
-- 最喜爱游戏（情感赛道）：**黑神话：悟空**，**Balatro**
-- 最喜爱电视剧：**Fallout S01, Scavengers Reign S01, 迷宫饭 S01**
-- 最喜爱电影：**Maharaja**
-- 最喜爱图书：**Why We Sleep**，**巴别塔**
-- 最喜爱播客：八分半，游荡集（都不是新播客，但比较有陪伴感）
-- 最喜爱购入：
+- 最喜爱专辑
+    - **Diamond Jubilee**
+- 最喜爱游戏
+    - **黑神话：悟空**
+    - **Balatro**
+- 最喜爱电视剧
+    - **Fallout S01**
+    - **Scavengers Reign S01**
+    - **迷宫饭 S01**
+- 最喜爱电影
+    - **Maharaja**
+- 最喜爱图书
+    - **Why We Sleep**
+    - **巴别塔**
+- 最喜爱播客
+    - 八分半
+    - 游荡集
+- 最喜爱购入
     - **Vitamix**
     - **iPod Video**
     - **Fujifilm X-T5**
@@ -59,27 +70,27 @@ tags = ["总结报告"]
 
 - 指导纲领
     - 用纸笔的方式记录生活中的一些待办事项
-    * 读书完成25本（去年baseline 18本，近几年来最低值）
-    * digital declutter: no buffer space! minimize the later part in “read it later”. Do it now or never!
+    - 读书完成25本（去年baseline 18本，近几年来最低值）
+    - digital declutter: no buffer space! minimize the later part in “read it later”. Do it now or never!
     - 文化娱乐消费要精不要多
     - 技能学习要精不要多，不要「遍地开分矿」
     - 多写文字记录，多写博客
     - 多拍照片记录生活
 - 技能拓展
     - 学用 emacs
-    - 学*会*用 org-mode
+    - 学<mark>会</mark>用 org-mode
     - make pizzas great again
     - 尝试做蟹黄汤包
 - 文化消费
     - 看海贼王
-    - 看完*火线 The Wire*
+    - 看完**火线 The Wire**
     - 在 Switch 上通关 **2** 款游戏（相信我，你会有时间的）
     - 有空多用用 Steam Deck 不然就卖了吧
-    - 通关几款心慕已久的「大作」：*Stardew Valley, Disco Elysium, Balder’s Gate 3*, etc.
-    - 通关 *Half Life: Alyx* 然后售出 Meta Quest 3S
-    - 读完 *Moneyball* 并看完同名电影
+    - 通关几款心慕已久的「大作」：**Stardew Valley**, **Disco Elysium**, **Balder’s Gate 3**, etc.
+    - 通关 **Half Life: Alyx** 然后售出 Meta Quest 3S
+    - 读完 **Moneyball** 并看完同名电影
     - 把支付方式从 Steam/Kindle 等平台移除，想要购买的时候加入一个纯文本 wishlist，并写下想买的原因；不要怕麻烦，然后等到真正需要的时候或两周的冷静期之后再买
-    - 组一局复杂桌游 (*Arkham Horror* 或者 *Detective: City of Angels*)
+    - 组一局复杂桌游 (**Arkham Horror** 或者 **Detective: City of Angels**)
 - Fine-tune the body
     - 改善睡眠。根据 Why We Sleep 书中一说，理想情况下应该是这样的：8 hrs opportunity sleeping time. No heavy use of blue light LED screens 1.5 hrs prior to sleep (that should be 9:30pm-ish)
     - 锻炼：划船
