--- a/content/posts/2025-01-01-ac2024.md
+++ b/content/posts/2025-01-01-ac2024.md
@@ -16,9 +16,10 @@ tags = ["总结报告"]
 - 从入门到放弃。
 
 事实是年初的计划发生了偏差，多出来许多需要处理的小事。尽管我在朋友圈里只是说了一句「2024 是平淡但又有突破的一年」，以及配了一张海狮晒太阳的图片，实际情况是，「突破了一年，现在在12月31日歇下来看，总算清净了」。
+
 ## 1.2024.0 版本路线图复盘
 
-不论怎么说，[2023 年的年度总结应该起什么名字](https://rexarski.com/zh/2023/12/ac2023/) 里提到了这些展望，这里再复习一番。
+不论怎么说，[2023 年的年度总结应该起什么名字](https://rexarski.com/posts/2023/12/ac2023/) 里提到了这些展望，这里再复习一番。
 
 - **筹办婚礼。** 九月完成✅
 - **购房。** 三月完成✅
@@ -40,27 +41,28 @@ tags = ["总结报告"]
 ## 书影音游总结
 
 - 最喜爱专辑
-    - **Diamond Jubilee**
+  - **[Diamond Jubilee](https://neodb.social/album/0hTJXtXGPKiBNyZ5HJetkm)**
+  - **[HIT ME HARD AND SOFT](https://neodb.social/album/7DGjHyILs3ZwVJ2iNBwOUM)**
 - 最喜爱游戏
-    - **黑神话：悟空**
-    - **Balatro**
+  - **[黑神话：悟空](https://store.steampowered.com/app/2358720)**
+  - **[Balatro](https://store.steampowered.com/app/2379780/Balatro/)**
 - 最喜爱电视剧
-    - **Fallout S01**
-    - **Scavengers Reign S01**
-    - **迷宫饭 S01**
+  - **[Fallout S01](https://neodb.social/tv/season/5FyXt7D9AV5ieWNoDj7OPV)**
+  - **[Scavengers Reign S01](https://neodb.social/tv/season/57PyYqzRowAjrcajGknvnl)**
+  - **[迷宫饭 S01](https://neodb.social/tv/season/4RKAGeWOWfv9e3F4Y1z2gJ)**
 - 最喜爱电影
-    - **Maharaja**
+  - **[Maharaja](https://neodb.social/movie/6BC9VYt0bEyqrIyfp6OwXj)**
 - 最喜爱图书
-    - **Why We Sleep**
-    - **巴别塔**
+  - **[Why We Sleep](https://neodb.social/book/0murow6TjlxVnKwEz92UgG)**
+  - **[巴别塔](https://neodb.social/book/0xVa9oHQlquT2bntqm17wW)**
 - 最喜爱播客
-    - 八分半
-    - 游荡集
+  - [八分半](https://www.xiaoyuzhoufm.com/podcast/6603ea352d9eae5d0a5f9151)
+  - [游荡集](https://www.xiaoyuzhoufm.com/podcast/6163ca67c8c1d14e83366b31)
 - 最喜爱购入
-    - **Vitamix**
-    - **iPod Video**
-    - **Fujifilm X-T5**
-    - **Kobo Clara Color**
+  - **Vitamix**
+  - **iPod Video**
+  - **Fujifilm X-T5**
+  - **Kobo Clara Color**
 
 > 2024 年罗列了相当一部分的书在 backlog 中，小部分直接舍弃了，大部分挪到新年的一份 now.md (把它当作我的 [OBTF](https://mikegrindle.com/posts/obtf)[^2]）里作为 2025 的书单/阅读清单。
 
@@ -69,35 +71,35 @@ tags = ["总结报告"]
 初代版本同步到 Hobonichi，年底会再同步核查。依照类别分组。
 
 - 指导纲领
-    - 用纸笔的方式记录生活中的一些待办事项
-    - 读书完成25本（去年baseline 18本，近几年来最低值）
-    - digital declutter: no buffer space! minimize the later part in “read it later”. Do it now or never!
-    - 文化娱乐消费要精不要多
-    - 技能学习要精不要多，不要「遍地开分矿」
-    - 多写文字记录，多写博客
-    - 多拍照片记录生活
+  - 用纸笔的方式记录生活中的一些待办事项
+  - 读书完成25本（去年baseline 18本，近几年来最低值）
+  - digital declutter: no buffer space! minimize the later part in “read it later”. Do it now or never!
+  - 文化娱乐消费要精不要多
+  - 技能学习要精不要多，不要「遍地开分矿」
+  - 多写文字记录，多写博客
+  - 多拍照片记录生活
 - 技能拓展
-    - 学用 emacs
-    - 学<mark>会</mark>用 org-mode
-    - make pizzas great again
-    - 尝试做蟹黄汤包
+  - 学用 emacs
+  - 学<mark>会</mark>用 org-mode
+  - make pizzas great again
+  - 尝试做蟹黄汤包
 - 文化消费
-    - 看海贼王
-    - 看完**火线 The Wire**
-    - 在 Switch 上通关 **2** 款游戏（相信我，你会有时间的）
-    - 有空多用用 Steam Deck 不然就卖了吧
-    - 通关几款心慕已久的「大作」：**Stardew Valley**, **Disco Elysium**, **Balder’s Gate 3**, etc.
-    - 通关 **Half Life: Alyx** 然后售出 Meta Quest 3S
-    - 读完 **Moneyball** 并看完同名电影
-    - 把支付方式从 Steam/Kindle 等平台移除，想要购买的时候加入一个纯文本 wishlist，并写下想买的原因；不要怕麻烦，然后等到真正需要的时候或两周的冷静期之后再买
-    - 组一局复杂桌游 (**Arkham Horror** 或者 **Detective: City of Angels**)
+  - 看海贼王
+  - 看完**火线 [The Wire](https://neodb.social/tv/season/4OyGhVCrZayJ6625mjazxE)**
+  - 在 Switch 上通关 **2** 款游戏（相信我，你会有时间的）
+  - 有空多用用 Steam Deck 不然就卖了吧
+  - 通关几款心慕已久的「大作」：**Stardew Valley**, **Disco Elysium**, **Balder’s Gate 3**, etc.
+  - 通关 **[Half Life: Alyx](https://neodb.social/game/5fKeCuO9gjkIJLjBSzfRTX)** 然后售出 Meta Quest 3S
+  - 读完 **[Moneyball](https://neodb.social/book/1StARjo7sPO1vuVlMSO9vH)** 并看完[同名电影](https://neodb.social/movie/7LsIxolXxonzhpo26xwnnH)
+  - 把支付方式从 Steam/Kindle 等平台移除，想要购买的时候加入一个纯文本 wishlist，并写下想买的原因；不要怕麻烦，然后等到真正需要的时候或两周的冷静期之后再买
+  - 组一局复杂桌游 (**Arkham Horror** 或者 **Detective: City of Angels**)
 - Fine-tune the body
-    - 改善睡眠。根据 Why We Sleep 书中一说，理想情况下应该是这样的：8 hrs opportunity sleeping time. No heavy use of blue light LED screens 1.5 hrs prior to sleep (that should be 9:30pm-ish)
-    - 锻炼：划船
-    - 尝试每周间歇性断食
-    - 冥想
-    - 控糖
-    - 喝水并记录，目标为 2L；当然了，要会熟练掌握单位换算
+  - 改善睡眠。根据 Why We Sleep 书中一说，理想情况下应该是这样的：8 hrs opportunity sleeping time. No heavy use of blue light LED screens 1.5 hrs prior to sleep (that should be 9:30pm-ish)
+  - 锻炼：划船
+  - 尝试每周间歇性断食
+  - 冥想
+  - 控糖
+  - 喝水并记录，目标为 2L；当然了，要会熟练掌握单位换算
 
 [^1]: 2023 年。
 [^2]: One Big Text File.
