[ADD] new blog post about Day One migration
- Updated Changelog and Now page
- Added a new entry in the changelog for the restructuring of article tags and the addition of a sparkline in the article list page.
- Updated the "How2home" page with a title and improved formatting.
- Revised the "toolbox" page title and added a description.
- Updated multiple blog posts to change tags from English to Chinese for better localization.

--- a/content/posts/2023-11-20-app-defaults-2023.md
+++ b/content/posts/2023-11-20-app-defaults-2023.md
@@ -3,7 +3,7 @@ title = "我的默认应用 2023"
 slug = "app-defaults-2023"
 date = "2023-11-20"
 description = ""
-tags = ["没事爱折腾"]
+tags = ["没事折腾"]
 +++
 
 最近到年底，有看到大家在[竞相分享](https://defaults.rknight.me)自己的「年度默认应用」，我也来凑个热闹。我一直在[这里](https://github.com/rexarski/toolbox/)记录自己的使用列表，但是有点长；以下是我当下，也就是 2023 年度的更精简的版本。
