--- a/content/posts/2024-02-29-distillm-01.md
+++ b/content/posts/2024-02-29-distillm-01.md
@@ -2,7 +2,7 @@
 title = "DistiLLM 01"
 date = "2024-02-29"
 description = ""
-tags = ["nlp", "distillm"]
+tags = ["自然语言"]
 +++
 
 ## DistiLLM is a casual LLM-related reading curation
