--- a/content/posts/2024-05-01-distillm-03.md
+++ b/content/posts/2024-05-01-distillm-03.md
@@ -2,7 +2,7 @@
 title = "DistiLLM 03"
 date = "2024-05-01"
 description = ""
-tags = ["nlp", "distillm"]
+tags = ["自然语言"]
 +++
 
 Here I am, again during my quick lunch break, bringing the third installment in our series where I curate some of NLP topics/blogs/papers. I must confess, the task of keeping up with the fast-paced world of NLP while juggling my own schedule has been overwhelming lately. In fact, as I type this, there's a pile of travel bags eyeing me, begging to be packed for my upcoming trip. So, I find myself wondering if, perhaps, a good old "copy and paste" might be the way to go---just for this month.
