--- a/content/posts/2024-12-03-app-defaults-2024.md
+++ b/content/posts/2024-12-03-app-defaults-2024.md
@@ -3,7 +3,7 @@ title = "我的默认应用 2024"
 slug = "app-defaults-2024"
 date = "2024-12-03"
 description = ""
-tags = ["没事爱折腾"]
+tags = ["没事折腾"]
 +++
 
 总体来说就是做了很多减法，和[去年相比](/posts/2023/11/app-defaults-2023/)更新了的地方我高亮了一下。
