--- a/content/posts/2024-03-31-distillm-02.md
+++ b/content/posts/2024-03-31-distillm-02.md
@@ -2,7 +2,7 @@
 title = "DistiLLM 02"
 date = "2024-04-22"
 description = ""
-tags = ["nlp", "distillm"]
+tags = ["自然语言"]
 +++
 
 Life has a funny way of keeping us on our toes, doesn't it? These past few months have been, a whirlwind of errands filling my todo lists. Despite the chaos, I did manage to carve out a bit of downtime to put together this blog post. But let's face it, they won't ever be my longterm commitment. Honestly, my goal is not (maybe was) to keep a rundown of what's happening in or around the industry. Rather, I want this space to be more like a reflection of my thoughts and encounters.
