docs: update game entries, modify blog tags, and enhance navigation features

--- a/content/posts/2025-06-17-ears.md
+++ b/content/posts/2025-06-17-ears.md
@@ -2,7 +2,7 @@
 title: "梅雨季"
 date: 2025-06-17
 slug: "ears"
-tags: ["日日更"]
+tags: ["日日谈"]
 ---
 
 TIL 梅雨季的英文叫「East Asian rainy season」.我看来这个说法不太对，至少就我的生活经验来看这个应该是南方独有的体验。
