--- a/content/posts/2025-06-22-brisket.md
+++ b/content/posts/2025-06-22-brisket.md
@@ -2,7 +2,7 @@
 title: "熏牛胸肉"
 date: 2025-06-22
 slug: "brisket"
-tags: ["日日更"]
+tags: ["日日谈"]
 ---
 
 Smoking brisket 的制作比我想象的时间要长太多，于是坐在车库里看着车道发呆/此刻打开 iPad 来写东西成为了一种休闲活动。抽空看完了《冷宴》: 在一个局部战争的框框下讲一个组队复仇的闯关故事，也是一个关于背叛来背叛去的故事。所有人都得没有善终，但要比三部曲的结局好了不少。喜欢，打一个 8/10 的分数。
