feat(blog): add descriptions to archive blogs for better context and display in recent blogs
- updated homepage to display the latest three posts instead of one
- refined CSS for better readability and aesthetics in both light and dark modes

--- a/content/posts/2023-01-06-rime.md
+++ b/content/posts/2023-01-06-rime.md
@@ -2,7 +2,7 @@
 title = "RIME 输入法配置"
 slug = "rime"
 date = "2023-01-06"
-description = "在 macOS 上配置一下我最喜欢的鼠须管输入法，以便以后的自己需要重新部署。"
+description = "详细介绍在 macOS 上配置 Rime 输入法的步骤，包括双拼方案安装、自定义配置和主题设置。"
 tags = ["没事折腾"]
 +++
 
