--- a/content/posts/2023-01-14-snippets.md
+++ b/content/posts/2023-01-14-snippets.md
@@ -1,7 +1,7 @@
 +++
 title = "如何将 Alfred 的快捷指令迁移到 Raycast"
 date = "2023-01-14"
-description = ""
+description = "介绍将 Alfred 快捷指令迁移到 Raycast 的方法，并分享批量导入脚本和常用片段。"
 tags = ["代码经验"]
 +++
 
