--- a/content/posts/2023-09-26-starship.md
+++ b/content/posts/2023-09-26-starship.md
@@ -1,7 +1,7 @@
 +++
 title = "星船启动！"
 date = "2023-09-26"
-description = ""
+description = "从 Fig 被 AWS 收购后切换到 Starship 终端提示符的完整配置指南，包括 oh-my-zsh、zsh 插件、主题和字体的安装步骤。"
 tags = ["代码经验"]
 +++
 
