--- a/content/posts/2023-11-20-app-defaults-2023.md
+++ b/content/posts/2023-11-20-app-defaults-2023.md
@@ -2,7 +2,7 @@
 title = "我的默认应用 2023"
 slug = "app-defaults-2023"
 date = "2023-11-20"
-description = ""
+description = "如题。"
 tags = ["没事折腾"]
 +++
 
