--- a/content/posts/2024-02-29-distillm-01.md
+++ b/content/posts/2024-02-29-distillm-01.md
@@ -1,7 +1,7 @@
 +++
 title = "DistiLLM 01"
 date = "2024-02-29"
-description = ""
+description = "2024年2月 LLM 领域重要进展的精选汇总，涵盖 Sora、Gemini 1.5、Representation Engineering、Mistral 等前沿技术，以及 RAG、微调、幻觉等核心问题的深度解析。"
 tags = ["自然语言"]
 +++
 
