--- a/content/posts/2024-03-31-distillm-02.md
+++ b/content/posts/2024-03-31-distillm-02.md
@@ -1,7 +1,7 @@
 +++
 title = "DistiLLM 02"
 date = "2024-04-22"
-description = ""
+description = "2024年3月 LLM 领域精选动态，涵盖 Claude 3 发布、70B 模型家庭训练指南、FSDP+QLoRA 技术解析、LLM 评估方法详解，以及 Mamba、Transformer 调试器等前沿工具介绍。"
 tags = ["自然语言"]
 +++
 
