--- a/content/posts/2024-05-01-distillm-03.md
+++ b/content/posts/2024-05-01-distillm-03.md
@@ -1,7 +1,7 @@
 +++
 title = "DistiLLM 03"
 date = "2024-05-01"
-description = ""
+description = "2024年4月 LLM 领域重要动态汇总，涵盖 Mistral 8x22B、Llama 3、Phi-3、OpenELM 等模型发布，幻觉检测技术进展，以及 Python 工具链、深度学习框架等周边技术发展。"
 tags = ["自然语言"]
 +++
 
