--- a/content/posts/2024-12-03-app-defaults-2024.md
+++ b/content/posts/2024-12-03-app-defaults-2024.md
@@ -2,7 +2,7 @@
 title = "我的默认应用 2024"
 slug = "app-defaults-2024"
 date = "2024-12-03"
-description = ""
+description = "如题。"
 tags = ["没事折腾"]
 +++
 
