--- a/content/posts/2024-12-31-ipod-mod.md
+++ b/content/posts/2024-12-31-ipod-mod.md
@@ -2,7 +2,7 @@
 title = "iPod Video gen 5.5 翻新"
 slug = "ipod-mod"
 date = "2024-12-31"
-description = ""
+description = "果然捣鼓是没有止境的。"
 tags = ["捣鼓硬件"]
 +++
 
