--- a/content/posts/2025-07-09-iceland.md
+++ b/content/posts/2025-07-09-iceland.md
@@ -2,6 +2,7 @@
 title: "冰岛"
 date: 2025-07-09T18:00:06-04:00
 slug: "iceland"
+description: "分享对冰岛的记忆和印象，从足球、音乐到游戏和旅行视频，探讨文化连接的主题。"
 tags: ["日日谈"]
 ---
 
