--- a/content/posts/2025-07-11-daikon-2.md
+++ b/content/posts/2025-07-11-daikon-2.md
@@ -2,6 +2,7 @@
 title: "Daikon 的迷思 part 2"
 date: 2025-07-11
 slug: "daikon-2"
+description: "继续讨论白萝卜在美国超市被误认的问题，收银员将其识别为防风根或大黄。"
 tags: ["日日谈"]
 ---
 
