--- a/content/posts/2025-07-23-x-rant.md
+++ b/content/posts/2025-07-23-x-rant.md
@@ -2,6 +2,7 @@
 title: "Xcruciating"
 date: 2025-07-23
 slug: "x-rant"
+description: "吐槽X/Twitter平台带来的负面体验，以及本地警察局只在该平台发布信息造成的困扰。"
 tags: ["日日谈"]
 ---
 
