--- a/content/posts/2025-06-26-f1-the-movie.md
+++ b/content/posts/2025-06-26-f1-the-movie.md
@@ -2,22 +2,23 @@
 title: "F1 狂飙飞车"
 date: 2025-06-26
 slug: "f1-the-movie"
+description: "评价 F1 电影《极速争锋》，分析其优缺点，包括配乐、速度感表现以及剧情设定的问题。"
 tags: ["日日谈"]
 ---
 
 昨晚看完电影之后，我简单地列举了一些优缺点：
 
 * 优点：
-    * 配乐在线，情绪渲染到位，有几处我是被感动到了。
-    * 车载视角比转播更爽，不愧是 Top Gun Maverick 导演。速度感很直观。
-    * 典型的好莱坞爆米花电影，个人英雄主义的又一座丰碑。
+  * 配乐在线，情绪渲染到位，有几处我是被感动到了。
+  * 车载视角比转播更爽，不愧是 Top Gun Maverick 导演。速度感很直观。
+  * 典型的好莱坞爆米花电影，个人英雄主义的又一座丰碑。
 * 缺点：
-    * 电影中 FIA 的存在感很低，感觉就像不存在一样。或者说他们从头到尾都是在搞笑的。
-    * 策略组和 pit crew 都像是临时工，作为「前两年零封垫底的车队」好歹也干了两年啊，怎么可能这样业余。
-    * 没有 F1 车手有台词，而车队负责人也只有少数几位有台词。讲的那几句台词除了让车迷观众欣然一笑以外，也处处透露着「表演感」。
-    * 电影中这半个赛季九场比赛的撞车太多了。为了戏剧性我可以理解，但是你这都飞车飞天上了……
-    * 反派太平面了，而且挺蠢的。
-    * 不跑排位赛的车手能直接上正赛吗？Sir Lewis 确定没有说这样不行吗？
+  * 电影中 FIA 的存在感很低，感觉就像不存在一样。或者说他们从头到尾都是在搞笑的。
+  * 策略组和 pit crew 都像是临时工，作为「前两年零封垫底的车队」好歹也干了两年啊，怎么可能这样业余。
+  * 没有 F1 车手有台词，而车队负责人也只有少数几位有台词。讲的那几句台词除了让车迷观众欣然一笑以外，也处处透露着「表演感」。
+  * 电影中这半个赛季九场比赛的撞车太多了。为了戏剧性我可以理解，但是你这都飞车飞天上了……
+  * 反派太平面了，而且挺蠢的。
+  * 不跑排位赛的车手能直接上正赛吗？Sir Lewis 确定没有说这样不行吗？
 
 6分 out of 10分. 但是如果用 7 分制来说我会给 5/7，小推荐，可以算作大制作爽片，生活也需要这种调剂。
 
