docs: :memo: update now and last two blog posts

--- a/content/posts/2026-01-01-ac2025.md
+++ b/content/posts/2026-01-01-ac2025.md
@@ -35,14 +35,14 @@ tags = ["总结报告"]
 - 你是如何度过节假日的？带娃。
 - 你今年坠入爱河了吗？如果说「共浴爱河」== 「一起游泳」，then yes.
 - 你是否有讨厌某个你去年此时不觉得讨厌的人呢？好像没有🤔.
-- 你最喜欢的电视节目是什么？节目还是剧呢？目前来说节目是黑白大厨，正在看第二季。
+- 你最喜欢的电视节目是什么？节目还是剧呢？目前来说节目是黑白大厨，正在看第二季。如果是电视剧的话，*混沌少年时* 以及 *Clarkson’s Farm Season 4*.
 - 你读过最好的一本书是什么？今年看的书虽然多，但是真的没有接近满分的好书推荐。第一律法系列的《*冷宴*》我很喜欢，但是我在这里宁愿推荐 Craig Mod 写的 *Things Becoming Other Things*，看了开头可能五分之一，还没读完，但是很喜欢他的文笔。
 - 你今年发现的最好听的一首歌是什么？*Some Day Come Back to Me*, Low Roar 的遗作。
 - 你今年看过最喜欢的一部电影是什么？往年的电影今年完看的——*燃烧*，今年上映的电影——*哪吒 2*。今年想看的太多但是看的太少，*Zootopia 2*, *One Battle After Another* 都还没看呢。
 - 你今年吃过最好吃的一顿饭是什么？情人节在 Jont 大出血；如果排除「一顿」的限制，应该是自己家的 Ducking Delicious Homemade Bread. 甚至还做的自己的 logo 和包装袋送朋友。
 - 有什么是你想要且得到了的？娃。
 - 有什么是你想要却没有得到的？肌肉。
-- 你生日那天做了什么？老婆卤的牛肉，煮的拉面。
+- 你生日那天做了什么？~~老婆卤的牛肉，煮的拉面。~~记忆串了，今年是老婆自制的水果挞蛋糕。
 - 有什么还未发生的事，如果发生了，会让你的这一年变得无比满足? 暂无；接近的答案有 Pacers 总决赛 G7 如果 Tyrese Haliburton 没有受伤……
 - 你会如何描述你今年的个人时尚风格？随便穿穿，宽松舒适，日式澡堂风。
 - 是什么让你保持理智？娃，以及有更大的世界可以探索。
@@ -50,7 +50,9 @@ tags = ["总结报告"]
 - 哪个政治问题最令你有感而发？枪支管控。
 - 你想念哪些人？许久未见的家人和朋友。
 - 在你新认识的人之中，谁是最好的？这就让我觉得遗憾了，今年没有认识太多新的朋友；圈子也多半在自己公司里，所以暂缺。
-- 今年你学到了什么宝贵的人生经验？Think of someone you love and remember that someday you'll be separated from them by death. Then, feel grateful for the time you have together—right now, in this moment.[^1]
+- 今年你学到了什么宝贵的人生经验？
+    - Think of someone you love and remember that someday you'll be separated from them by death. Then, feel grateful for the time you have together—right now, in this moment.[^1]
+    - 「永远别问自己不想知道答案的问题」。
 - 能够总结你这一年的一句话是什么？女儿好啊。
 
 [^1]: [Facing Death: Depressing or Inspiring? ](https://www.originalmacguy.com/facing-death-depressing-or-inspiring/), *OriginalMacGuy*
