docs(now,toolbox): update now page and toolbox, refresh data
- now: add things-mcp + Claude GTD weekly roundtable bullet
- toolbox: add Calendr, Consent-O-Matic, pomo, Simple Comic; add darktable, geist-font to archive
- data: bump Concept2 lifetime meters, regenerate post embeddings

--- a/content/posts/2023-01-04-ac2022.md
+++ b/content/posts/2023-01-04-ac2022.md
@@ -1,10 +1,10 @@
-+++
-title = "2022年简单回顾和2023新年展望"
-slug = "ac2022"
-date = "2023-01-04"
-description = "回顾 2022 年的个人成长和经历，包括健康、工作、旅行、投资等方面的收获和新年展望。"
-tags = ["总结报告"]
-+++
+---
+title: "2022年简单回顾和2023新年展望"
+slug: "ac2022"
+date: "2023-01-04"
+description: "回顾 2022 年的个人成长和经历，包括健康、工作、旅行、投资等方面的收获和新年展望。"
+tags: ["总结报告"]
+---
 
 ## 一
 
