--- a/content/posts/2024-12-01-wukong.md
+++ b/content/posts/2024-12-01-wukong.md
@@ -1,10 +1,10 @@
-+++
-title = "黑神话"
-slug = "wukong"
-date = "2024-12-01"
-description = "不太会写游戏评测。"
-tags = ["游戏推手"]
-+++
+---
+title: "黑神话"
+slug: "wukong"
+date: "2024-12-01"
+description: "不太会写游戏评测。"
+tags: ["游戏推手"]
+---
 
 不是评测，只是一点感受。
 
