--- a/content/posts/2024-12-31-ipod-mod.md
+++ b/content/posts/2024-12-31-ipod-mod.md
@@ -1,10 +1,10 @@
-+++
-title = "iPod Video gen 5.5 翻新"
-slug = "ipod-mod"
-date = "2024-12-31"
-description = "果然捣鼓是没有止境的。"
-tags = ["捣鼓硬件"]
-+++
+---
+title: "iPod Video gen 5.5 翻新"
+slug: "ipod-mod"
+date: "2024-12-31"
+description: "果然捣鼓是没有止境的。"
+tags: ["捣鼓硬件"]
+---
 
 婚礼前从 eBay 上购入了一款 gen 6th iPod Classic 作为现场的音乐播放器，之后不太满意它的可拓展性于是出掉后又入了一台 gen 5.5 iPod Video. 参考了这四个视频稍稍做了翻新：
 
