--- a/content/posts/2023-01-06-rime.md
+++ b/content/posts/2023-01-06-rime.md
@@ -1,10 +1,10 @@
-+++
-title = "RIME 输入法配置"
-slug = "rime"
-date = "2023-01-06"
-description = "详细介绍在 macOS 上配置 Rime 输入法的步骤，包括双拼方案安装、自定义配置和主题设置。"
-tags = ["没事折腾"]
-+++
+---
+title: "RIME 输入法配置"
+slug: "rime"
+date: "2023-01-06"
+description: "详细介绍在 macOS 上配置 Rime 输入法的步骤，包括双拼方案安装、自定义配置和主题设置。"
+tags: ["没事折腾"]
+---
 
 看到这篇「[为什么我在 2022 年还坚持使用 Rime 输入法](https://utgd.net/article/9618)」，确实觉得 macOS 自带的输入法有其局限性，于是秉着练习双拼的想法，重新折腾一下 Rime 输入法。
 
