--- a/content/posts/2023-05-20-chitchat.md
+++ b/content/posts/2023-05-20-chitchat.md
@@ -1,9 +1,9 @@
-+++
-title = "chitchat"
-date = "2023-05-20"
-description = "介绍 chitchat 项目作为 ChatGPT 扩展，结合 langchain 实现文件输入、向量检索与自托管的对话功能。"
-tags = ["自然语言"]
-+++
+---
+title: "chitchat"
+date: "2023-05-20"
+description: "介绍 chitchat 项目作为 ChatGPT 扩展，结合 langchain 实现文件输入、向量检索与自托管的对话功能。"
+tags: ["自然语言"]
+---
 
 <details>
 <summary>原文 chitchat</summary>
