--- a/content/posts/2023-12-31-ac2023.md
+++ b/content/posts/2023-12-31-ac2023.md
@@ -1,10 +1,10 @@
-+++
-title = "2023 年的年度总结应该起什么名字"
-slug = "ac2023"
-date = "2023-12-31"
-description = "如题。"
-tags = ["总结报告"]
-+++
+---
+title: "2023 年的年度总结应该起什么名字"
+slug: "ac2023"
+date: "2023-12-31"
+description: "如题。"
+tags: ["总结报告"]
+---
 
 ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░ 99.72%
 
