--- a/content/posts/2024-03-31-distillm-02.md
+++ b/content/posts/2024-03-31-distillm-02.md
@@ -1,9 +1,9 @@
-+++
-title = "DistiLLM 02"
-date = "2024-04-22"
-description = "2024年3月 LLM 领域精选动态，涵盖 Claude 3 发布、70B 模型家庭训练指南、FSDP+QLoRA 技术解析、LLM 评估方法详解，以及 Mamba、Transformer 调试器等前沿工具介绍。"
-tags = ["自然语言"]
-+++
+---
+title: "DistiLLM 02"
+date: "2024-04-22"
+description: "2024年3月 LLM 领域精选动态，涵盖 Claude 3 发布、70B 模型家庭训练指南、FSDP+QLoRA 技术解析、LLM 评估方法详解，以及 Mamba、Transformer 调试器等前沿工具介绍。"
+tags: ["自然语言"]
+---
 
 Life has a funny way of keeping us on our toes, doesn't it? These past few months have been, a whirlwind of errands filling my todo lists. Despite the chaos, I did manage to carve out a bit of downtime to put together this blog post. But let's face it, they won't ever be my longterm commitment. Honestly, my goal is not (maybe was) to keep a rundown of what's happening in or around the industry. Rather, I want this space to be more like a reflection of my thoughts and encounters.
 
