--- a/content/posts/2024-05-01-distillm-03.md
+++ b/content/posts/2024-05-01-distillm-03.md
@@ -1,9 +1,9 @@
-+++
-title = "DistiLLM 03"
-date = "2024-05-01"
-description = "2024年4月 LLM 领域重要动态汇总，涵盖 Mistral 8x22B、Llama 3、Phi-3、OpenELM 等模型发布，幻觉检测技术进展，以及 Python 工具链、深度学习框架等周边技术发展。"
-tags = ["自然语言"]
-+++
+---
+title: "DistiLLM 03"
+date: "2024-05-01"
+description: "2024年4月 LLM 领域重要动态汇总，涵盖 Mistral 8x22B、Llama 3、Phi-3、OpenELM 等模型发布，幻觉检测技术进展，以及 Python 工具链、深度学习框架等周边技术发展。"
+tags: ["自然语言"]
+---
 
 Here I am, again during my quick lunch break, bringing the third installment in our series where I curate some of NLP topics/blogs/papers. I must confess, the task of keeping up with the fast-paced world of NLP while juggling my own schedule has been overwhelming lately. In fact, as I type this, there's a pile of travel bags eyeing me, begging to be packed for my upcoming trip. So, I find myself wondering if, perhaps, a good old "copy and paste" might be the way to go---just for this month.
 
