--- a/content/posts/2025-03-31-202503.md
+++ b/content/posts/2025-03-31-202503.md
@@ -1,10 +1,10 @@
-+++
-title = "至少写完这篇也算是完成了一个待办事项"
-date = "2025-03-31"
-slug = "202503"
-description = "四分之一的二零二五；成年人的崩溃都写在了待办事项上"
-tags = ["总结报告"]
-+++
+---
+title: "至少写完这篇也算是完成了一个待办事项"
+date: "2025-03-31"
+slug: "202503"
+description: "四分之一的二零二五；成年人的崩溃都写在了待办事项上"
+tags: ["总结报告"]
+---
 
 ## 待办事项的崩盘
 
